--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.19.0",
+    "dirname": "^0.1.0",
     "ejs": "^3.1.5",
+    "es-dirname": "^0.1.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
+    "from": "^0.1.7",
+    "import": "0.0.6",
     "mongoose": "^5.11.9",
     "require": "^2.4.20",
     "twit": "^2.2.11",
